proj3/y.output
State 13 conflicts: 2 shift/reduce
State 14 conflicts: 1 shift/reduce
State 15 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: PROGRAMnum IDnum SEMInum ClassDecl_rec

    2 ClassDecl_rec: ClassDecl
    3              | ClassDecl_rec ClassDecl

    4 ClassDecl: CLASSnum IDnum ClassBody

    5 ClassBody: LBRACEnum Decls MethodDecl_List RBRACEnum

    6 MethodDecl_List: MethodDecl_z1
    7                | MethodDecl_List MethodDecl

    8 MethodDecl_z1: %empty
    9              | MethodDecl

   10 MethodDecl: METHODnum Type IDnum LPARENnum Formal_Parameter_List RPARENnum Block

   11 $@1: %empty

   12 MethodDecl: METHODnum VOIDnum $@1 IDnum LPARENnum Formal_Parameter_List RPARENnum Block

   13 Type: IDnum Type_rec
   14     | INTnum Type_rec
   15     | IDnum Type_rec DOTnum Type
   16     | INTnum Type_rec DOTnum Type

   17 Type_rec: %empty
   18         | LBRACnum RBRACnum
   19         | Type_rec LBRACnum RBRACnum

   20 Formal_Parameter_List: %empty
   21                      | Formal_Parameter_List_rec

   22 Formal_Parameter_List_rec: Formal_Parameter
   23                          | Formal_Parameter SEMInum Formal_Parameter_List_rec

   24 $@2: %empty

   25 Formal_Parameter: VALnum $@2 INTnum Formal_Parameter_rec

   26 $@3: %empty

   27 Formal_Parameter: INTnum $@3 Formal_Parameter_rec

   28 Formal_Parameter_rec: IDnum
   29                     | IDnum COMMAnum Formal_Parameter_rec

   30 Block: StatementList
   31      | Decls StatementList

   32 StatementList: LBRACEnum StatementList_rec RBRACEnum

   33 StatementList_rec: Statement
   34                  | StatementList_rec SEMInum Statement

   35 Statement: %empty
   36          | AssignmentStatement
   37          | MethodCallStatement
   38          | ReturnStatement
   39          | IfStatement
   40          | WhileStatement

   41 Decls: %empty
   42      | DECLARATIONSnum FieldDecl_List ENDDECLARATIONSnum

   43 FieldDecl_List: %empty
   44               | FieldDecl
   45               | FieldDecl_List FieldDecl

   46 FieldDecl: Type FieldDecl_rec SEMInum

   47 FieldDecl_rec: FieldDecl_Id
   48              | FieldDecl_rec COMMAnum FieldDecl_Id

   49 FieldDecl_Id: VariableDeclId
   50             | VariableDeclId EQUALnum VariableInitializer

   51 VariableDeclId: IDnum
   52               | IDnum BracketLoop

   53 BracketLoop: LBRACnum RBRACnum
   54            | BracketLoop LBRACnum RBRACnum

   55 VariableInitializer: Expression
   56                    | ArrayInitializer
   57                    | ArrayCreationExpression

   58 ArrayInitializer: LBRACEnum ArrayInitializer_rec RBRACEnum

   59 ArrayInitializer_rec: Expression
   60                     | ArrayInitializer_rec COMMAnum Expression

   61 ArrayCreationExpression: INTnum ArrayCreationExpression_rec

   62 ArrayCreationExpression_rec: ArrayExpression
   63                            | ArrayCreationExpression_rec ArrayExpression

   64 ArrayExpression: LBRACnum Expression RBRACnum

   65 AssignmentStatement: Variable ASSGNnum Expression

   66 MethodCallStatement: Variable LPARENnum ParameterList RPARENnum

   67 ParameterList: %empty
   68              | Expression
   69              | Expression COMMAnum ParameterList

   70 ReturnStatement: RETURNnum
   71                | RETURNnum Expression

   72 IfStatement: IFnum Expression StatementList
   73            | IFnum Expression StatementList ELSEnum StatementList
   74            | IFnum Expression StatementList ELSEnum IfStatement

   75 WhileStatement: WHILEnum Expression StatementList

   76 Expression: SimpleExpression
   77           | SimpleExpression LTnum SimpleExpression
   78           | SimpleExpression LEnum SimpleExpression
   79           | SimpleExpression EQnum SimpleExpression
   80           | SimpleExpression NEnum SimpleExpression
   81           | SimpleExpression GEnum SimpleExpression
   82           | SimpleExpression GTnum SimpleExpression

   83 Factor: UnsignedConstant
   84       | Variable
   85       | MethodCallStatement
   86       | LPARENnum Expression RPARENnum
   87       | NOTnum Factor

   88 UnsignedConstant: ICONSTnum
   89                 | SCONSTnum

   90 SimpleExpression: Term SimpleExpression_Op_rec
   91                 | PLUSnum Term SimpleExpression_Op_rec
   92                 | MINUSnum Term SimpleExpression_Op_rec

   93 SimpleExpression_Op_rec: %empty
   94                        | SimpleExpression_Op SimpleExpression_Op_rec

   95 SimpleExpression_Op: PLUSnum Term
   96                    | MINUSnum Term
   97                    | ORnum Term

   98 Term: Factor Term_Op_rec

   99 Term_Op_rec: %empty
  100            | Term_Op Term_Op_rec

  101 Term_Op: TIMESnum Factor
  102        | DIVIDEnum Factor
  103        | ANDnum Factor

  104 Variable: IDnum Variable_rec

  105 Variable_rec: %empty
  106             | Index Variable_rec
  107             | Field Variable_rec

  108 Field: DOTnum IDnum

  109 Index: LBRACnum Index_rec RBRACnum

  110 Index_rec: Expression
  111          | Expression COMMAnum Index_rec


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAMnum (258) 1
IDnum (259) 1 4 10 12 13 15 28 29 51 52 104 108
SEMInum (260) 1 23 34 46
CLASSnum (261) 4
DECLARATIONSnum (262) 42
ENDDECLARATIONSnum (263) 42
COMMAnum (264) 29 48 60 69 111
EQUALnum (265) 50
LBRACEnum (266) 5 32 58
RBRACEnum (267) 5 32 58
LBRACnum (268) 18 19 53 54 64 109
RBRACnum (269) 18 19 53 54 64 109
LPARENnum (270) 10 12 66 86
RPARENnum (271) 10 12 66 86
VOIDnum (272) 12
INTnum (273) 14 16 25 27 61
METHODnum (274) 10 12
VALnum (275) 25
DOTnum (276) 15 16 108
ASSGNnum (277) 65
RETURNnum (278) 70 71
IFnum (279) 72 73 74
ELSEnum (280) 73 74
WHILEnum (281) 75
LTnum (282) 77
LEnum (283) 78
EQnum (284) 79
NEnum (285) 80
GEnum (286) 81
GTnum (287) 82
PLUSnum (288) 91 95
MINUSnum (289) 92 96
ORnum (290) 97
TIMESnum (291) 101
DIVIDEnum (292) 102
ANDnum (293) 103
NOTnum (294) 87
ICONSTnum (295) 88
SCONSTnum (296) 89


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1, on right: 0
ClassDecl_rec (44)
    on left: 2 3, on right: 1 3
ClassDecl (45)
    on left: 4, on right: 2 3
ClassBody (46)
    on left: 5, on right: 4
MethodDecl_List (47)
    on left: 6 7, on right: 5 7
MethodDecl_z1 (48)
    on left: 8 9, on right: 6
MethodDecl (49)
    on left: 10 12, on right: 7 9
$@1 (50)
    on left: 11, on right: 12
Type (51)
    on left: 13 14 15 16, on right: 10 15 16 46
Type_rec (52)
    on left: 17 18 19, on right: 13 14 15 16 19
Formal_Parameter_List (53)
    on left: 20 21, on right: 10 12
Formal_Parameter_List_rec (54)
    on left: 22 23, on right: 21 23
Formal_Parameter (55)
    on left: 25 27, on right: 22 23
$@2 (56)
    on left: 24, on right: 25
$@3 (57)
    on left: 26, on right: 27
Formal_Parameter_rec (58)
    on left: 28 29, on right: 25 27 29
Block (59)
    on left: 30 31, on right: 10 12
StatementList (60)
    on left: 32, on right: 30 31 72 73 74 75
StatementList_rec (61)
    on left: 33 34, on right: 32 34
Statement (62)
    on left: 35 36 37 38 39 40, on right: 33 34
Decls (63)
    on left: 41 42, on right: 5 31
FieldDecl_List (64)
    on left: 43 44 45, on right: 42 45
FieldDecl (65)
    on left: 46, on right: 44 45
FieldDecl_rec (66)
    on left: 47 48, on right: 46 48
FieldDecl_Id (67)
    on left: 49 50, on right: 47 48
VariableDeclId (68)
    on left: 51 52, on right: 49 50
BracketLoop (69)
    on left: 53 54, on right: 52 54
VariableInitializer (70)
    on left: 55 56 57, on right: 50
ArrayInitializer (71)
    on left: 58, on right: 56
ArrayInitializer_rec (72)
    on left: 59 60, on right: 58 60
ArrayCreationExpression (73)
    on left: 61, on right: 57
ArrayCreationExpression_rec (74)
    on left: 62 63, on right: 61 63
ArrayExpression (75)
    on left: 64, on right: 62 63
AssignmentStatement (76)
    on left: 65, on right: 36
MethodCallStatement (77)
    on left: 66, on right: 37 85
ParameterList (78)
    on left: 67 68 69, on right: 66 69
ReturnStatement (79)
    on left: 70 71, on right: 38
IfStatement (80)
    on left: 72 73 74, on right: 39 74
WhileStatement (81)
    on left: 75, on right: 40
Expression (82)
    on left: 76 77 78 79 80 81 82, on right: 55 59 60 64 65 68 69 71
    72 73 74 75 86 110 111
Factor (83)
    on left: 83 84 85 86 87, on right: 87 98 101 102 103
UnsignedConstant (84)
    on left: 88 89, on right: 83
SimpleExpression (85)
    on left: 90 91 92, on right: 76 77 78 79 80 81 82
SimpleExpression_Op_rec (86)
    on left: 93 94, on right: 90 91 92 94
SimpleExpression_Op (87)
    on left: 95 96 97, on right: 94
Term (88)
    on left: 98, on right: 90 91 92 95 96 97
Term_Op_rec (89)
    on left: 99 100, on right: 98 100
Term_Op (90)
    on left: 101 102 103, on right: 100
Variable (91)
    on left: 104, on right: 65 66 84
Variable_rec (92)
    on left: 105 106 107, on right: 104 106 107
Field (93)
    on left: 108, on right: 107
Index (94)
    on left: 109, on right: 106
Index_rec (95)
    on left: 110 111, on right: 109 111


State 0

    0 $accept: . Program $end

    PROGRAMnum  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: PROGRAMnum . IDnum SEMInum ClassDecl_rec

    IDnum  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: PROGRAMnum IDnum . SEMInum ClassDecl_rec

    SEMInum  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: PROGRAMnum IDnum SEMInum . ClassDecl_rec

    CLASSnum  shift, and go to state 6

    ClassDecl_rec  go to state 7
    ClassDecl      go to state 8


State 6

    4 ClassDecl: CLASSnum . IDnum ClassBody

    IDnum  shift, and go to state 9


State 7

    1 Program: PROGRAMnum IDnum SEMInum ClassDecl_rec .
    3 ClassDecl_rec: ClassDecl_rec . ClassDecl

    CLASSnum  shift, and go to state 6

    $default  reduce using rule 1 (Program)

    ClassDecl  go to state 10


State 8

    2 ClassDecl_rec: ClassDecl .

    $default  reduce using rule 2 (ClassDecl_rec)


State 9

    4 ClassDecl: CLASSnum IDnum . ClassBody

    LBRACEnum  shift, and go to state 11

    ClassBody  go to state 12


State 10

    3 ClassDecl_rec: ClassDecl_rec ClassDecl .

    $default  reduce using rule 3 (ClassDecl_rec)


State 11

    5 ClassBody: LBRACEnum . Decls MethodDecl_List RBRACEnum

    DECLARATIONSnum  shift, and go to state 13

    $default  reduce using rule 41 (Decls)

    Decls  go to state 14


State 12

    4 ClassDecl: CLASSnum IDnum ClassBody .

    $default  reduce using rule 4 (ClassDecl)


State 13

   42 Decls: DECLARATIONSnum . FieldDecl_List ENDDECLARATIONSnum

    IDnum   shift, and go to state 15
    INTnum  shift, and go to state 16

    IDnum     [reduce using rule 43 (FieldDecl_List)]
    INTnum    [reduce using rule 43 (FieldDecl_List)]
    $default  reduce using rule 43 (FieldDecl_List)

    Type            go to state 17
    FieldDecl_List  go to state 18
    FieldDecl       go to state 19


State 14

    5 ClassBody: LBRACEnum Decls . MethodDecl_List RBRACEnum

    METHODnum  shift, and go to state 20

    METHODnum  [reduce using rule 8 (MethodDecl_z1)]
    $default   reduce using rule 8 (MethodDecl_z1)

    MethodDecl_List  go to state 21
    MethodDecl_z1    go to state 22
    MethodDecl       go to state 23


State 15

   13 Type: IDnum . Type_rec
   15     | IDnum . Type_rec DOTnum Type

    LBRACnum  shift, and go to state 24

    LBRACnum  [reduce using rule 17 (Type_rec)]
    $default  reduce using rule 17 (Type_rec)

    Type_rec  go to state 25


State 16

   14 Type: INTnum . Type_rec
   16     | INTnum . Type_rec DOTnum Type

    LBRACnum  shift, and go to state 24

    LBRACnum  [reduce using rule 17 (Type_rec)]
    $default  reduce using rule 17 (Type_rec)

    Type_rec  go to state 26


State 17

   46 FieldDecl: Type . FieldDecl_rec SEMInum

    IDnum  shift, and go to state 27

    FieldDecl_rec   go to state 28
    FieldDecl_Id    go to state 29
    VariableDeclId  go to state 30


State 18

   42 Decls: DECLARATIONSnum FieldDecl_List . ENDDECLARATIONSnum
   45 FieldDecl_List: FieldDecl_List . FieldDecl

    IDnum               shift, and go to state 15
    ENDDECLARATIONSnum  shift, and go to state 31
    INTnum              shift, and go to state 16

    Type       go to state 17
    FieldDecl  go to state 32


State 19

   44 FieldDecl_List: FieldDecl .

    $default  reduce using rule 44 (FieldDecl_List)


State 20

   10 MethodDecl: METHODnum . Type IDnum LPARENnum Formal_Parameter_List RPARENnum Block
   12           | METHODnum . VOIDnum $@1 IDnum LPARENnum Formal_Parameter_List RPARENnum Block

    IDnum    shift, and go to state 15
    VOIDnum  shift, and go to state 33
    INTnum   shift, and go to state 16

    Type  go to state 34


State 21

    5 ClassBody: LBRACEnum Decls MethodDecl_List . RBRACEnum
    7 MethodDecl_List: MethodDecl_List . MethodDecl

    RBRACEnum  shift, and go to state 35
    METHODnum  shift, and go to state 20

    MethodDecl  go to state 36


State 22

    6 MethodDecl_List: MethodDecl_z1 .

    $default  reduce using rule 6 (MethodDecl_List)


State 23

    9 MethodDecl_z1: MethodDecl .

    $default  reduce using rule 9 (MethodDecl_z1)


State 24

   18 Type_rec: LBRACnum . RBRACnum

    RBRACnum  shift, and go to state 37


State 25

   13 Type: IDnum Type_rec .
   15     | IDnum Type_rec . DOTnum Type
   19 Type_rec: Type_rec . LBRACnum RBRACnum

    LBRACnum  shift, and go to state 38
    DOTnum    shift, and go to state 39

    $default  reduce using rule 13 (Type)


State 26

   14 Type: INTnum Type_rec .
   16     | INTnum Type_rec . DOTnum Type
   19 Type_rec: Type_rec . LBRACnum RBRACnum

    LBRACnum  shift, and go to state 38
    DOTnum    shift, and go to state 40

    $default  reduce using rule 14 (Type)


State 27

   51 VariableDeclId: IDnum .
   52               | IDnum . BracketLoop

    LBRACnum  shift, and go to state 41

    $default  reduce using rule 51 (VariableDeclId)

    BracketLoop  go to state 42


State 28

   46 FieldDecl: Type FieldDecl_rec . SEMInum
   48 FieldDecl_rec: FieldDecl_rec . COMMAnum FieldDecl_Id

    SEMInum   shift, and go to state 43
    COMMAnum  shift, and go to state 44


State 29

   47 FieldDecl_rec: FieldDecl_Id .
